# inkmeter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  deploy.sh  lv_conf.h  toolchain-arm.cmake
.github/workflows/: release.yml
kindle/: config.example
kindle/extensions/ai-usage/: config.xml  menu.json
src/: fetch.cpp  fetch.h  main.cpp  mxcfb.h  ui.cpp  ui.h
